--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,6 @@
 @import "abstracts/variables";
-@import "abstracts/mixins";
+@import "abstracts/mixin-queries";
+@import "abstracts/mixin-fluid-type";
 
 @import "base/base";
 @import "base/typography";
