--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -29,10 +29,17 @@ body {
   overflow-x: hidden;
   font-family: "Rubik", sans-serif;
   font-weight: 300;
-  font-size: min(max(2.8rem, 4vw), 5rem);
-  line-height: min(max(3.2rem, 4.5vw), 5.8rem);
+  line-height: 125%;
   color: #252322;
   background-color: #fcfcfc; }
+  body {
+    font-size: 2.8rem; }
+    @media screen and (min-width: 32rem) {
+      body {
+        font-size: calc(2.8rem + 1.7 * ((100vw - 32rem) / 88)); } }
+    @media screen and (min-width: 120rem) {
+      body {
+        font-size: 4.5rem; } }
 
 h1 {
   font-size: 5rem; }
@@ -77,8 +84,15 @@ h3 {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  font-weight: 300;
-  font-size: min(max(3.8rem, 4vw), 6.5rem); }
+  font-weight: 300; }
+  .navbar {
+    font-size: 3.8rem; }
+    @media screen and (min-width: 32rem) {
+      .navbar {
+        font-size: calc(3.8rem + 1.4 * ((100vw - 32rem) / 78)); } }
+    @media screen and (min-width: 110rem) {
+      .navbar {
+        font-size: 5.2rem; } }
 
 .logo {
   height: 9rem;
@@ -130,7 +144,6 @@ h3 {
   display: block;
   height: 4px;
   width: 100%;
-  margin-top: 3.5%;
   background-color: #252322;
   border-radius: 5px;
   transform: scaleX(0);
@@ -229,13 +242,12 @@ h3 {
   border-radius: 5px;
   background-color: #fffcfe;
   box-shadow: 1px 1px 7px rgba(240, 240, 240, 0.4); }
-
-@media all and (max-width: 760px) {
-  .card-skills {
-    max-width: 40rem;
-    min-width: 32rem;
-    margin: 0 auto;
-    margin-bottom: 3rem; } }
+  @media only screen and (max-width: 47.5em) {
+    .card-skills {
+      max-width: 40rem;
+      min-width: 32rem;
+      margin: 0 auto;
+      margin-bottom: 3rem; } }
 
 .btn-line {
   width: 100%;
@@ -268,10 +280,15 @@ h3 {
   grid-column: center-start / center-end;
   padding: 30px 0px;
   font-weight: 400;
-  font-size: min(max(1.6rem, 4vw), 2.5rem);
-  font-size: min(max(1.6rem, 3.8vw), 2.2rem);
-  line-height: 4rem;
   background-color: #be79df; }
+  .footer {
+    font-size: 1.8rem; }
+    @media screen and (min-width: 32rem) {
+      .footer {
+        font-size: calc(1.8rem + 0.4 * ((100vw - 32rem) / 88)); } }
+    @media screen and (min-width: 120rem) {
+      .footer {
+        font-size: 2.2rem; } }
 
 .footer-item {
   grid-column: center-start / center-end;
@@ -279,8 +296,15 @@ h3 {
   justify-content: space-between; }
 
 .footer-icons {
-  font-size: min(max(2.5rem, 4vw), 3rem);
   color: #252322; }
+  .footer-icons {
+    font-size: 2.5rem; }
+    @media screen and (min-width: 32rem) {
+      .footer-icons {
+        font-size: calc(2.5rem + 0.5 * ((100vw - 32rem) / 88)); } }
+    @media screen and (min-width: 120rem) {
+      .footer-icons {
+        font-size: 3rem; } }
   .footer-icons a:hover {
     color: #fcfcfc; }
 
@@ -315,23 +339,44 @@ h3 {
 
 .container-about {
   grid-column: center-start / center-end;
-  font-size: min(max(1.6rem, 3.8vw), 2.2rem);
-  line-height: min(max(3rem, 4vw), 3.4rem); }
+  line-height: 155%; }
   @media only screen and (max-width: 33.4em) {
     .container-about {
       font-weight: 400; } }
+  .container-about {
+    font-size: 1.8rem; }
+    @media screen and (min-width: 32rem) {
+      .container-about {
+        font-size: calc(1.8rem + 0.4 * ((100vw - 32rem) / 88)); } }
+    @media screen and (min-width: 120rem) {
+      .container-about {
+        font-size: 2.2rem; } }
 
 .about-title {
   padding-bottom: 1rem;
   margin-bottom: 6rem;
   font-weight: 400;
-  font-size: min(max(2.6rem, 3.8vw), 3.8rem);
   border-bottom: 2px solid #f0f0f0; }
+  .about-title {
+    font-size: 3rem; }
+    @media screen and (min-width: 32rem) {
+      .about-title {
+        font-size: calc(3rem + 0.8 * ((100vw - 32rem) / 88)); } }
+    @media screen and (min-width: 120rem) {
+      .about-title {
+        font-size: 3.8rem; } }
 
 h3 {
   padding-bottom: 1rem;
-  font-weight: 400;
-  font-size: min(max(2rem, 3.8vw), 2.8rem); }
+  font-weight: 400; }
+  h3 {
+    font-size: 2.2rem; }
+    @media screen and (min-width: 32rem) {
+      h3 {
+        font-size: calc(2.2rem + 0.6 * ((100vw - 32rem) / 88)); } }
+    @media screen and (min-width: 120rem) {
+      h3 {
+        font-size: 2.8rem; } }
 
 .about-content {
   display: grid;
@@ -381,8 +426,15 @@ h3 {
 
 .skill-icon {
   font-size: 7rem;
-  font-size: min(max(5rem, 3.8vw), 7rem);
   color: #605f5e; }
+  .skill-icon {
+    font-size: 4rem; }
+    @media screen and (min-width: 32rem) {
+      .skill-icon {
+        font-size: calc(4rem + 2 * ((100vw - 32rem) / 88)); } }
+    @media screen and (min-width: 120rem) {
+      .skill-icon {
+        font-size: 6rem; } }
 
 .border-bottom {
   border-bottom: 2px solid #605f5e; }
