100% for mobile instead of 100vh added

--- a/css/style.css
+++ b/css/style.css
@@ -323,10 +323,12 @@ h3 {
   display: grid;
   grid-template-columns: [full-start] minmax(4rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(4rem, 1fr) [full-end];
   grid-template-rows: 20vh 80vh 15rem; }
-
-@media all and (max-width: 535px) {
-  .grid {
-    grid-template-columns: [full-start] minmax(2rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(2rem, 1fr) [full-end]; } }
+  @media only screen and (max-width: 39.3em) {
+    .grid {
+      grid-template-columns: [full-start] minmax(2rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(2rem, 1fr) [full-end]; } }
+  @media only screen and (max-width: 39.3em) {
+    .grid {
+      grid-template-rows: 20% 80% 15rem; } }
 
 .grid-about {
   margin: 0px auto;
