--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,7 +1,7 @@
 // Colors
 $primary: #efa8e4;
 $primary: #be79df;
-$primary: red;
+$primary: #e56378;
 $primary-light: #d299e9;
 $primary-dark: #5f307e;
 
