--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ a {
   color: #252322; }
 
 a:hover {
-  color: #be79df; }
+  color: red; }
 
 ul {
   list-style-type: none; }
@@ -77,7 +77,7 @@ h3 {
   margin-bottom: 1.5rem; }
 
 .text-primary {
-  color: #be79df; }
+  color: red; }
 
 .navbar {
   grid-column: center-start / center-end;
@@ -117,7 +117,7 @@ h3 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #be79df;
+  background-color: red;
   transform: translateY(-100%);
   transition: transform .3s ease-in; }
 
@@ -191,7 +191,7 @@ h3 {
 .header {
   position: relative;
   grid-column: center-start / center-end;
-  border-bottom: 0.8rem solid #be79df; }
+  border-bottom: 0.8rem solid red; }
 
 .header:before {
   content: "";
@@ -225,7 +225,7 @@ h3 {
   padding-bottom: .8rem;
   border-top-left-radius: 10rem;
   border-top-right-radius: 10rem;
-  background-color: #be79df; }
+  background-color: red; }
   .header-circle a:hover {
     color: #fcfcfc; }
 
@@ -260,8 +260,8 @@ h3 {
   padding-bottom: 1rem;
   text-decoration: none;
   text-align: center;
-  color: #be79df;
-  border: 2px solid #be79df;
+  color: red;
+  border: 2px solid red;
   border-radius: .5rem; }
   @media only screen and (max-width: 47.5em) {
     .btn-line {
@@ -271,7 +271,7 @@ h3 {
     font-size: 3rem; }
   .btn-line:hover {
     color: #fcfcfc;
-    background-color: #be79df; }
+    background-color: red; }
   .btn-line:hover .btn-line-icon {
     color: #fcfcfc; }
 
@@ -280,7 +280,7 @@ h3 {
   grid-column: center-start / center-end;
   padding: 30px 0px;
   font-weight: 400;
-  background-color: #be79df; }
+  background-color: red; }
   .footer {
     font-size: 1.8rem; }
     @media screen and (min-width: 32rem) {
@@ -328,7 +328,7 @@ h3 {
       grid-template-columns: [full-start] minmax(2rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(2rem, 1fr) [full-end]; } }
   @media only screen and (max-width: 39.3em) {
     .grid {
-      grid-template-rows: 20% 70% 15rem; } }
+      grid-template-rows: 20% 80% 15rem; } }
 
 .grid-about {
   margin: 0px auto;
